# FFS

./: .gitignore  CMakeLists.txt
src/FFS/: Definitions.c  Definitions.h  FFS.h  Length.c  Length.h  Replace.h  StartsWith.c
tests/: Length_TestSuite.cpp  Replace_TestSuite.cpp  StartsWith_TestSuite.cpp
